--- a/frontend/src/Styles/About/about.css
+++ b/frontend/src/Styles/About/about.css
@@ -10,7 +10,7 @@
     margin: 50px auto;
     height: 75vh;
     width: 90%;
-    background-image: url("https://images.pexels.com/photos/13203179/pexels-photo-13203179.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+    background-image: url("https://images.unsplash.com/photo-1512917774080-9991f1c4c750?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     background-position: center;
     border-radius: 15px;
@@ -72,7 +72,7 @@
 /* center */
 .center {
     text-align: center;
-    font-size: 1.5rem; 
+    font-size: 1.3rem; 
     padding: 10px;
 }
 
