--- a/frontend/src/Styles/About/imageCorousel.css
+++ b/frontend/src/Styles/About/imageCorousel.css
@@ -9,9 +9,12 @@
     align-items: center;
     justify-content: center;
     margin: 40px auto;
-    width: 90%;
+    width: 100%;
+    height: 500px;
     position: relative;
+    background: linear-gradient(109.6deg, rgb(0, 37, 84) 11.2%, rgba(0, 37, 84, 0.32) 100.2%);
     padding: 0 20px; /* Add some padding to prevent button overlap */
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .property-carousel {
@@ -59,16 +62,18 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    padding: 10px;
+    padding: 2px;
     transition: 0.3s;
     z-index: 2;
     /* Adjust positioning to avoid overlap */
     width: 40px; 
     height: 40px;
+    border-radius: 50px;
+    background-color: gray;
 }
 
 .carousel-btn:hover {
-    color: #0056b3;
+    color: white;
 }
 
 .prev {
@@ -114,6 +119,8 @@
 
 @media (max-width: 480px) {
     .property-carousel {
+        display: flex;
+        flex-direction: column;
         gap: 10px;
     }
 
