--- a/frontend/src/Styles/About/navbar.css
+++ b/frontend/src/Styles/About/navbar.css
@@ -4,30 +4,33 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background: #fff;
+    /* background: #6dbfb8;
+    color: #fff; */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(to top, #dfe9f3 0%, white 100%);
+    color: black;
 }
 
 .logo img {
     height: 50px;
-    border-radius: 8px;
+    border-radius: 50px;
 }
 
 .nav-middle {
     display: flex;
-    gap: 20px;
+    gap: 50px;
 }
 
 .nav-middle a {
     text-decoration: none;
-    color: #333;
+    color: black;
     font-size: 1.2rem;
     font-weight: 500;
     transition: color 0.3s ease;
 }
 
 .nav-middle a:hover {
-    color: #007bff;
+    color: brown;
 }
 
 .nav-icons {
@@ -37,9 +40,15 @@
     color: #333;
     transition: color 0.3s ease;
 }
+.Nav-favourite-icon{
+    color: #333;
+}
+.Nav-favourite-icon:hover{
+    color: brown;
+}
 
 .nav-icons:hover {
-    color: #007bff;
+    color: brown;
 }
 
 /* Responsive Styles */
